force-app/main/default/objects/Event_Details__c/fields/WTR_Director__c.field-meta.xml
<CustomField>
    <fullName>WTR_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Details (WTR Director)</relationshipLabel>
    <relationshipName>Event_WTR_Director</relationshipName>
    <type>Lookup</type>
</CustomField>