force-app/main/default/objects/Event_Details__c/fields/Zip_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_1__c</fullName>
    <description>Part of address 1 which will be populated as address Primary Shipping when the Conference Location and Hotel Location are different. System field not exposed on a page layout. Values are set in Event Detail Main Process</description>
    <label>Zip Code 1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>