force-app/main/default/objects/Event_Details__c/fields/Zip_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_2__c</fullName>
    <label>Zip Code 2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>