force-app/main/default/objects/Event_Details__c/listViews/Active_Events.listView-meta.xml
<ListView>
    <fullName>Active_Events</fullName>
    <columns>NAME</columns>
    <columns>Weeks__c</columns>
    <columns>Conference_Location__c</columns>
    <columns>City_1__c</columns>
    <columns>Sr_Planner__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>Campaign__c</columns>
    <columns>CV_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Estimated_Attendance__c</columns>
    <columns>Attending__c</columns>
    <columns>Capacity__c</columns>
    <columns>Sell_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Setup,Planning</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Active Events</label>
</ListView>