force-app/main/default/objects/Event_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventCode__c</columns>
    <columns>Description__c</columns>
    <columns>Attendance_Goal__c</columns>
    <columns>Capacity__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Campaign__c</columns>
    <columns>Campaign_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>