force-app/main/default/objects/Event_Details__c/listViews/Event_List_view.listView-meta.xml
<ListView>
    <fullName>Event_List_view</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Campaign__c</columns>
    <columns>Conference_Location__c</columns>
    <columns>City_1__c</columns>
    <columns>State__c</columns>
    <columns>Attending__c</columns>
    <columns>Capacity__c</columns>
    <columns>Sr_Planner__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>2/2/2023</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Setup,Planning</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>2/6/2023</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Event List view</label>
    <sharedTo>
        <group>Event_Planners</group>
    </sharedTo>
</ListView>