force-app/main/default/objects/Event_Details__c/listViews/FY2022_Spring_Events.listView-meta.xml
<ListView>
    <fullName>FY2022_Spring_Events</fullName>
    <columns>Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Sr_Planner__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>Stage__c</columns>
    <columns>Attending__c</columns>
    <columns>Estimated_Attendance__c</columns>
    <columns>Attendance_Actual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2021</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Planning,Complete</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>8/31/2022</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>FY2022 Spring Events</label>
</ListView>