force-app/main/default/objects/Event_Details__c/listViews/FY2023_Fall_Events.listView-meta.xml
<ListView>
    <fullName>FY2023_Fall_Events</fullName>
    <columns>NAME</columns>
    <columns>EventCode__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Weeks__c</columns>
    <columns>Campaign__c</columns>
    <columns>Conference_Location__c</columns>
    <columns>City_1__c</columns>
    <columns>State__c</columns>
    <columns>Capacity__c</columns>
    <columns>Campaign_Members__c</columns>
    <columns>Estimated_Attendance__c</columns>
    <columns>Sr_Planner__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>9/1/2022</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Setup,Planning,Complete</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>12/31/2022</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>FY2023 Fall Events</label>
</ListView>