force-app/main/default/objects/Event_Details__c/listViews/FY2026_Events.listView-meta.xml
<ListView>
    <fullName>FY2026_Events</fullName>
    <columns>NAME</columns>
    <columns>Weeks__c</columns>
    <columns>Conference_Location__c</columns>
    <columns>City_1__c</columns>
    <columns>Sr_Planner__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>Campaign__c</columns>
    <columns>GL_Account__c</columns>
    <columns>CV_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Estimated_Attendance__c</columns>
    <columns>Attending__c</columns>
    <columns>Capacity__c</columns>
    <columns>Sell_To__c</columns>
    <columns>Attendance_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Setup,Planning,Complete</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>9/1/2025</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>8/30/2026</value>
    </filters>
    <label>FY2026 Events</label>
</ListView>